install/k8s/quantanexus/templates/quantanexus/nginx-reverse-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-reverse-proxy
  namespace: abc-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-reverse-proxy
  template:
    metadata:
      labels:
        app: nginx-reverse-proxy
    spec:
      nodeSelector:
        kubernetes.io/hostname: com-cilium-master-2
      containers:
      - name: nginx
        image: registry.cn-hangzhou.aliyuncs.com/hwua_namespace/nginx:reverse
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: app-code
          mountPath: /wwwroot
        - name: ttd-script
          mountPath: /opt/t.sh
          subPath: t.sh
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-reverse-proxy-config
      - name: app-code
        emptyDir: {}
      - name: ttd-script
        configMap:
          name: hi168-ttyd
