install/k8s/quantanexus/templates/quantanexus/nginx-reverse-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-reverse-proxy
  namespace: abc-platform
spec:
  selector:
    app: nginx-reverse-proxy
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
  type: ClusterIP
