install/k8s/quantanexus/templates/quantanexus/quantanexus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abc-platform
  namespace: abc-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      name: abc-platform
  template:
    metadata:
      labels:
        name: abc-platform
    spec:
      nodeSelector:
        kubernetes.io/hostname: com-cilium-master-2
      containers:
        - name: quantanexus
          image: harbor.hi168.com/abc/quantanexus:0.0.7
          imagePullPolicy: IfNotPresent
          command: [ "/entrypoint.sh" ]
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8069
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            privileged: true
          volumeMounts:
            - name: dmidecode
              mountPath: /sbin/dmidecode
            - name: mem
              mountPath: /dev/mem
            # 存放插件
            - name: quantanexus-addons
              mountPath: /var/lib/quantanexus/quantanexus-addons
            # 存放odoo调试运行时
            - name: quantanexus-runtime
              mountPath: /opt/runtime/quantanexus
            # 存放odoo启动配置文件
            - name: quantanexus-config
              mountPath: /opt/etc/quantanexus
            # 存放odoo运行时数据
            - name: quantanexus-data
              mountPath: /opt/data/quantanexus
            # 存放各种配置杂项
            - name: quantanexus-misc
              mountPath: /opt/misc/quantanexus
      imagePullSecrets:
        - name: hi168-harbor-secret
      volumes:
        - name: dmidecode
          hostPath:
            path: /sbin/dmidecode
        - name: mem
          hostPath:
            path: /dev/mem
        # 存放插件
        - name: quantanexus-addons
          emptyDir: { }
        # 存放odoo调试运行时
        - name: quantanexus-runtime
          hostPath:
            path: /mnt/quantanexus/runtime
            type: DirectoryOrCreate
        # 存放odoo启动配置文件
        - name: quantanexus-config
          configMap:
            name: quantanexus-config
        # 存放odoo运行时数据
        - name: quantanexus-data
          hostPath:
            path: /var/lib/quantanexus/quantanexus
            type: DirectoryOrCreate
        # 存放各种配置杂项
        - name: quantanexus-misc
          hostPath:
            path: /var/lib/quantanexus/quantanexus-misc
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: abc-platform
  namespace: abc-platform
  labels:
    name: abc-platform
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8069
      targetPort: 8069
      protocol: TCP
    - name: longpolling
      port: 8072
      targetPort: 8072
  selector:
    name: abc-platform
