install/k8s/quantanexus/templates/quantanexus/quantanexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ingress.class: nginx
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/client-body-buffer-size":"200M","nginx.ingress.kubernetes.io/configuration-snippet":"if ($request_uri ~* \\.(js|css|gif|jpe?g|png)) {\n  expires 1d;\n  add_header Cache-Control \"public, max-age=86400\";\n}\n","nginx.ingress.kubernetes.io/cors-allow-headers":"DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Ca [...]
    nginx.ingress.kubernetes.io/client-body-buffer-size: 200M
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* \.(js|css|gif|jpe?g|png)) {
        expires 1d;
        add_header Cache-Control "public, max-age=86400";
      }
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/enable-gzip: "true"
    nginx.ingress.kubernetes.io/gzip-compress: "true"
    nginx.ingress.kubernetes.io/gzip-proxied: any
    nginx.ingress.kubernetes.io/gzip-types: application/json application/xml application/javascript
      text/css text/plain
    nginx.ingress.kubernetes.io/proxy-body-size: 200M
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
    nginx.ingress.kubernetes.io/service-weight: ""
    nginx.org/client-max-body-size: 200M
    nginx.org/websocket-services: abc-experiment-service
  name: abc-platform
  namespace: abc-platform
spec:
  ingressClassName: nginx
  rules:
    - host: qntest001.hi168.com
      http:
        paths:
          - backend:
              service:
                name: nginx-reverse-proxy
                port:
                  number: 8443
            pathType: ImplementationSpecific
          - pathType: Prefix
            path: /longpolling
            backend:
              service:
                name: abc-platform
                port:
                  number: 8072
          - backend:
              service:
                name: abc-experiment-service
                port:
                  number: 8075
            path: /certterminal
            pathType: Prefix
          - backend:
              service:
                name: abc-experiment-service
                port:
                  number: 8075
            path: /websockify
            pathType: Prefix
          - pathType: Prefix
            path: /hwua_node_service
            backend:
              service:
                name: abc-experiment-service
                port:
                  number: 8075
  tls:
    - hosts:
        - qntest001.hi168.com
      secretName: abc-tls
